syntax = "proto3";
package joltify.burnauction;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "joltify/burnauction/params.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/joltify-finance/joltify_lending/x/burnauction/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/demoChain/burnauction/params";
  }


  // Queries a list of Balance items.
  rpc Balance (QueryBalanceRequest) returns (QueryBalanceResponse) {
    option (google.api.http).get = "/demoChain/burnauction/balance";

  }

}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryBalanceRequest {}

message QueryBalanceResponse {
  string moduleAddress = 1;
  repeated cosmos.base.v1beta1.Coin tokens = 2 [(gogoproto.nullable) = false];
}

